<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="plats">Plats</string>
    <string name="entr_es">Entrées</string>
    <string name="desserts">Desserts</string>
    <string name="bienvenue_chez">Bienvenue chez</string>
    <string name="androiderestaurant">AndroidERestaurant</string>
    <string-array name="selection">
        <item>Foie Gras </item>
        <item>Coquilette jambon </item>
        <item>Royal au chocolat</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>
    <string name="ble_scan_play">Lancer le scan BLE</string>
    <string name="ble_scan_stop">Scan BLE en cours...</string>
    <string name="ble_scan_error">Pas de bluetooth disponible</string>
    <string name="AdressMac">Adresse Mac:</string>
    <string name="distanceBLE">TextView</string>
    <string name="deviceName">Device Unknow</string>
    <string name="ble_device_disconnected">Statut: déconnecté</string>
    <string name="ble_device_connected">Statut: connecté</string>
    <string name="ble_device_characterictic">Button</string>
    <string name="ble_device_write">Lecture</string>
    <string name="compteur">Compteur</string>
    <string name="order">Passer la commande</string>
</resources>